--- a/tasksOrganizerApp/templates/createCourse.html
+++ b/tasksOrganizerApp/templates/createCourse.html
@@ -9,6 +9,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
+        <button type="Submit">Crear</button>
     </form>
 </body>
 </html>
