--- a/tasksOrganizerApp/templates/homePage.html
+++ b/tasksOrganizerApp/templates/homePage.html
@@ -8,5 +8,6 @@
     <h1>Tareas pendientes</h1>
     <a href="http://127.0.0.1:8000/createCourse" > <button type="submit">Crear curso</button> </a>
     <a href="http://127.0.0.1:8000/createSubject" > <button type="submit">Crear asignatura</button> </a>
+    <a href="http://127.0.0.1:8000/createTask" > <button type="submit">Crear tarea</button> </a>
 </body>
 </html>
