--- a/tasksOrganizerApp/templates/homePage.html
+++ b/tasksOrganizerApp/templates/homePage.html
@@ -3,12 +3,18 @@
 <head>
 <meta charset="UTF-8">
     <title>Página principal</title>
+    <style>
+        .fila_menu{
+            display: inline;
+            margin-right: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Tareas pendientes</h1>
-    <a href="http://127.0.0.1:8000/createCourse" > <button type="submit">Crear curso</button> </a>
-    <a href="http://127.0.0.1:8000/createSubject" > <button type="submit">Crear asignatura</button> </a>
-    <a href="http://127.0.0.1:8000/createTask" > <button type="submit">Crear tarea</button> </a>
+    <a href="http://127.0.0.1:8000/createCourse" class="fila_menu"> <button type="submit">Crear curso</button> </a>
+    <a href="http://127.0.0.1:8000/createSubject" class="fila_menu"> <button type="submit">Crear asignatura</button> </a>
+    <a href="http://127.0.0.1:8000/createTask" class="fila_menu"> <button type="submit">Crear tarea</button> </a>
     <div>
         <h1>Lista de Tareas</h1>
          <ul>
