--- a/tasksOrganizerApp/templates/signInUp.html
+++ b/tasksOrganizerApp/templates/signInUp.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Iniciar sesión o registrase</h1>
-    <a href="http://127.0.0.1:8000/signIn" class="menu_fila"> <button type="submit">Iniciar sesión</button></a>
-    <a href="http://127.0.0.1:8000/signUp" class="menu_fila"><button type="submit">Registrarse</button></a>
+    <a href="http://127.0.0.1:8000/accounts/login" class="menu_fila"> <button type="submit">Iniciar sesión</button></a>
+    <a href="http://127.0.0.1:8000/register" class="menu_fila"><button type="submit">Registrarse</button></a>
 </body>
 </html>
