Log in required & log out

--- a/tasksOrganizerApp/templates/homePage.html
+++ b/tasksOrganizerApp/templates/homePage.html
@@ -15,6 +15,7 @@
     <a href="http://127.0.0.1:8000/createCourse" class="fila_menu"> <button type="submit">Crear curso</button> </a>
     <a href="http://127.0.0.1:8000/createSubject" class="fila_menu"> <button type="submit">Crear asignatura</button> </a>
     <a href="http://127.0.0.1:8000/createTask" class="fila_menu"> <button type="submit">Crear tarea</button> </a>
+    <a href="http://127.0.0.1:8000/logOut" class = "fila_menu"> <button type="submit">Cerrar sesión</button> </a>
     <div>
         <h1>Lista de Tareas</h1>
          <ul>
