--- a/tasksOrganizerApp/templates/homePage.html
+++ b/tasksOrganizerApp/templates/homePage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <title>Página principal</title>
     <style>
         .fila_menu{
@@ -17,38 +17,43 @@
     <a href="http://127.0.0.1:8000/createTask" class="fila_menu"> <button type="submit">Crear tarea</button> </a>
     <a href="http://127.0.0.1:8000/logOut" class = "fila_menu"> <button type="submit">Cerrar sesión</button> </a>
     <div>
-        <h1>Lista de Tareas</h1>
-         <ul>
-             {% for course in courses %}
-                 <li>
-                    <a onclick="openTab('{{ course.title|slugify }}-{{ course.year }}')" href="#">{{ course.title }}</a>
-                 </li>
-             {% endfor %}
-         </ul>
-
-        <div>
+        <h1>Lista de Cursos</h1>
+        <ul>
             {% for course in courses %}
-                <div style="display: none" class="tab" id="{{ course.title|slugify }}-{{ course.year }}-content">
-                    <h3>{{ course.title }}</h3>
-                    <ul>
-                        {% for subject in course.subject_set.all %}
-                            <li>{{ subject.name }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
+                <li>
+                    <a onclick="openTab('{{ course.title|slugify }}-{{ course.year }}')" href="#">{{ course.title }}</a>
+                    <div id="{{ course.title|slugify }}-{{ course.year }}-content" style="display: none;" class="tab">
+                        <h3>Lista de asignaturas:</h3>
+                        <ul>
+                            {% for subject in course.subject_set.all %}
+                                <li>
+                                    {{ subject.name }}
+                                    {% if subject.task_set.all %}
+                                        <h4>Lista de tareas:</h4>
+                                        <ul>
+                                            {% for task in subject.task_set.all %}
+                                                <li>{{ task.name }}</li>
+                                            {% endfor %}
+                                        </ul>
+                                    {% endif %}
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </li>
             {% endfor %}
-        </div>
+        </ul>
     </div>
 
-<script>
-    function openTab(tabName) {
-        var i, tabContent;
-        tabContent = document.getElementsByClassName("tab");
-        for (i = 0; i < tabContent.length; i++) {
-            tabContent[i].style.display = "none";
+    <script>
+        function openTab(tabName) {
+            var i, tabContent;
+            tabContent = document.getElementsByClassName("tab");
+            for (i = 0; i < tabContent.length; i++) {
+                tabContent[i].style.display = "none";
+            }
+            document.getElementById(tabName + "-content").style.display = "block";
         }
-        document.getElementById(tabName + "-content").style.display = "block";
-    }
-</script>
+    </script>
 </body>
 </html>
