--- a/tasksOrganizerApp/templates/createCourse.html
+++ b/tasksOrganizerApp/templates/createCourse.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-    <title>Crear Curso</title>
-</head>
+{% extends 'base.html' %}
+{% block title %}Crear Curso{% endblock %}
+{% block content %}
 <body>
     <h1>Crea un curso</h1>
     <form method="post">
@@ -12,4 +9,4 @@
         <button type="Submit">Crear</button>
     </form>
 </body>
-</html>
+{% endblock %}
