--- a/tasksOrganizerApp/templates/register.html
+++ b/tasksOrganizerApp/templates/register.html
@@ -3,13 +3,51 @@
 <head>
 <meta charset="UTF-8">
     <title>Registrarse</title>
+    <style>
+        body {
+            margin: 0;
+            height: 100vh;
+            background:
+                    linear-gradient(45deg, rgb(81, 136, 241), transparent),
+                    repeating-linear-gradient(45deg, rgb(81, 138, 222) 0%, rgb(96, 134, 204) 5%, transparent 5%, transparent 10%),
+                    rgb(24, 43, 229) repeating-linear-gradient(-45deg, rgba(20, 79, 245, 0.38) 0%, rgba(53, 137, 222, 0.5) 5%, transparent 5%, transparent 10%)
+        }
+        .pagesContent {
+            text-align: center;
+            background-color: antiquewhite;
+            width: 40%;
+            margin: 20vh auto;
+            padding: 30px;
+            border: 4px solid black;
+            border-radius: 15px;
+        }
+
+        .pagesContent input,
+        .pagesContent button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            margin-bottom: 25px;
+        }
+        ul {
+            text-align: center;
+            padding-left: 0;
+        }
+
+        ul li {
+            list-style-position: inside;
+        }
+    </style>
 </head>
 <body>
-    <h1>Registrase</h1>
-<form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Registrarse</button>
-    </form>
+    <div class="pagesContent">
+        <h1>Registrase</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Registrarse</button>
+        </form>
+    </div>
 </body>
 </html>
