--- a/tasksOrganizerApp/templates/signInUp.html
+++ b/tasksOrganizerApp/templates/signInUp.html
@@ -4,15 +4,35 @@
 <meta charset="UTF-8">
     <title>Iniciar sesión / registrarse</title>
     <style>
-        .menu_fila{
-            display: inline;
-            margin-right: 100px;
+        body {
+            margin: 0;
+            height: 100vh;
+            background:
+                    linear-gradient(45deg, rgb(81, 136, 241), transparent),
+                    repeating-linear-gradient(45deg, rgb(81, 138, 222) 0%, rgb(96, 134, 204) 5%, transparent 5%, transparent 10%),
+                    rgb(24, 43, 229) repeating-linear-gradient(-45deg, rgba(20, 79, 245, 0.38) 0%, rgba(53, 137, 222, 0.5) 5%, transparent 5%, transparent 10%)
+        }
+        .pagesContent {
+            text-align: center;
+            background-color: antiquewhite;
+            width: 30%;
+            margin: 20vh auto;
+            padding: 20px;
+            border: 4px solid black;
+            border-radius: 15px;
+        }
+
+        .menu_fila {
+            display: inline-block;
+            margin-inline: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>Iniciar sesión o registrase</h1>
-    <a href="http://127.0.0.1:8000/accounts/login" class="menu_fila"> <button type="submit">Iniciar sesión</button></a>
-    <a href="http://127.0.0.1:8000/register" class="menu_fila"><button type="submit">Registrarse</button></a>
+    <div class="pagesContent">
+        <h1>Iniciar sesión o registrase</h1>
+        <a href="http://127.0.0.1:8000/accounts/login" class="menu_fila"> <button type="submit">Iniciar sesión</button></a>
+        <a href="http://127.0.0.1:8000/register" class="menu_fila"><button type="submit">Registrarse</button></a>
+    </div>
 </body>
 </html>
