--- a/tasksOrganizerApp/templates/subjectDetails.html
+++ b/tasksOrganizerApp/templates/subjectDetails.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalles de la asignatura</title>
+{% extends 'base.html' %}
+{% block title %}Detalles de la asignatura{% endblock %}
+{% block content %}
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -28,7 +20,6 @@
             font-weight: bold;
         }
     </style>
-</head>
 <body>
     <div class="container">
         <h1>Detalles de la asignatura</h1>
@@ -51,6 +42,5 @@
             </div>
             </div>
         </div>
-    </div>
 </body>
-</html>
+{% endblock %}
