--- a/tasksOrganizerApp/templates/subjectDetails.html
+++ b/tasksOrganizerApp/templates/subjectDetails.html
@@ -41,6 +41,10 @@
                 <span>{{ subject.credits }}</span>
             </div>
             </div>
+            <form method="post" action="{% url 'deleteSubject' subjectId=subject.id %}">
+                {% csrf_token %}
+                <button type="submit">Eliminar</button>
+            </form>
         </div>
 </body>
 {% endblock %}
