--- a/tasksOrganizerApp/templates/taskDetails.html
+++ b/tasksOrganizerApp/templates/taskDetails.html
@@ -57,6 +57,10 @@
                 </span>
             </div>
         </div>
+        <form method="post" action="{% url 'deleteTask' taskId=task.id %}">
+            {% csrf_token %}
+            <button type="submit">Eliminar</button>
+        </form>
     </div>
 </body>
 {% endblock %}
